updated mobile layout and fixed modal z-index

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 3.5em;
   text-align: center;
+  margin: 1rem;
   /* text-shadow: 6px 6px hsla(0, 0%, 0%, 0.75); */
 }
 
@@ -103,7 +104,7 @@ li {
 .button-wrapper {
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .questions {
@@ -128,6 +129,7 @@ li {
   position: absolute;
   width: 90%;
   height: 60%;
+  min-height: 250px;
   top: 35%;
   left: 50%;
   transform: translateX(-50%);
@@ -135,6 +137,8 @@ li {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin: 0;
+  padding: 1.5em 2em;
 }
 
 .question-modal ul {
@@ -205,10 +209,6 @@ h1 span {
 
 .question-container p:first-child {
   margin: 0;
-}
-
-.button-wrapper {
-  margin: 0 auto;
 }
 
 /* MODAL SECTION */
